--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -274,6 +274,7 @@
 <span class="chip" data-filter="puissances">Puissances</span> <span class="chip" data-filter="algebre">Algèbre</span>
 <span class="chip" data-filter="geometrie">Géométrie</span>
 <span class="chip" data-filter="mesures">Mesures</span>
+<span class="chip" data-filter="numeration">Numération</span>
 <span class="chip" data-filter="donnees">Données</span>
 </div>
 </div>
@@ -332,11 +333,11 @@
 <div class="icon-wrapper"><i data-lucide="triangle"></i></div>
 <h2 class="card-title">Gabarits Angles</h2>
 </a>
-<a class="choice-card" data-tags="mesures decimal" href="glisse_nombres_decimaux.html">
+<a class="choice-card" data-tags="numeration decimal tableau decimaux" href="glisse_nombres_decimaux.html">
 <div class="icon-wrapper"><i data-lucide="move"></i></div>
 <h2 class="card-title">Glisse décimaux</h2>
 </a>
-<a class="choice-card" data-tags="mesures tableau numeration" href="glisse_entiers_flex.html">
+<a class="choice-card" data-tags="numeration tableau entiers" href="glisse_entiers_flex.html">
 <div class="icon-wrapper"><i data-lucide="move"></i></div>
 <h2 class="card-title">Glisse entiers</h2>
 </a>
@@ -355,6 +356,10 @@
 <a class="choice-card" data-tags="donnees statistique" href="moyennes.html">
 <div class="icon-wrapper"><i data-lucide="bar-chart-3"></i></div>
 <h2 class="card-title">Moyennes</h2>
+</a>
+<a class="choice-card" data-tags="numeration decimal dixieme centieme plateau" href="numeration_decimale.html">
+<div class="icon-wrapper"><i data-lucide="hash"></i></div>
+<h2 class="card-title">Numération décimale</h2>
 </a>
 <a class="choice-card" data-tags="puissances exposant" href="feuille_coupee_puissance.html">
 <div class="icon-wrapper"><i data-lucide="scissors"></i></div>
@@ -445,7 +450,7 @@
 </a>
 <a class="choice-card" data-tags="mesures aire surface conversions conversion" href="unites_aires.html">
 <div class="icon-wrapper"><i data-lucide="maximize"></i></div>
-<h2 class="card-title">Unités d'aire — conversions</h2>
+<h2 class="card-title">Unités d'aire : conversions</h2>
 </a>
 </div>
 <div class="empty-state" id="emptyMsg">
